# InvestPal_FomoSapiens

./: Makefile  README.md  main.py  pyproject.toml
docs/: api.md
errors/: session.py  user_context.py
mcp_app/: app.py  app_test_client.py
models/: gen_ui_models.py  session.py  user_context.py
routers/: chat.py  session.py  user_context.py
services/: agent.py  chat.py  session.py  user_context.py
