[project]
name = "agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pymongo>=4.15.4",
    "pydantic-settings>=2.0.0",
    "fastapi[standard]>=0.122.0",
    "langchain>=1.1.2",
    "langchain-openai>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-anthropic>=1.2.0",
    "fastmcp>=3.0.0b2",
]
